--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Stars</title>
     <!--plugins-->
+
     <link href="assets/css/plugins/plugins.css" rel="stylesheet">
     <!--Custom css-->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -135,9 +136,7 @@
                         </ul>
                     </div>
                     <div class="right-search ml-4 dropdown">
-                        <a class="icon-search" href="#!" data-toggle="dropdown">
-                            <i class="ion-ios-search-strong"></i>
-                        </a>
+
                         <div class="dropdown-menu dropdown-menu-right">
                             <form class="form-inline">
                                 <input type="text" placeholder="Search" class="form-control">
@@ -195,43 +194,9 @@
         </section><!--main flex slider end-->
         <div class="space-50"></div>
         <div class="container">
-            <div class="row intro-row">
-                <div class="col-md-12 text-center wow animated fadeInUp">
-                    <h2>Bizwrap built for Minimal business Projects</h2>
-                    <h3 class="subtitle">With Clean and Modern Design</h3>
-                </div>
-                <div class="space-70"></div>
-                <div class=" col-md-4">
-                    <div class="services-box">
-                        <i class="ion-laptop"></i>
-                        <h4>Responsive design</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisl risus, porta sit amet dui eget...
-                        </p>
-                    </div>
-                </div><!--services box-->
-                <div class=" col-md-4">
-                    <div class="services-box">
-                        <i class="ion-ios-color-wand-outline"></i>
-                        <h4>Creative ideas</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisl risus, porta sit amet dui eget...
-                        </p>
-                    </div>
-                </div><!--services box-->
-                <div class="col-md-4">
-                    <div class="services-box">
-                        <i class="ion-social-twitter-outline"></i>
-                        <h4>Bootstrap4</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisl risus, porta sit amet dui eget...
-                        </p>
-                    </div>
-                </div><!--services box-->
-            </div><!--row end-->
+            <!--row end-->
             <div class="space-30"></div>
             <div class="text-center">
-                <a class="modal-video theme-btn-color-outline btn-radius btn" href="https://www.youtube.com/watch?v=cctFcl5EFYk">Watch Video <i class="ion-play"></i></a>
             </div>
         </div><!--intro with services end-->
         <div class="space-70"></div><div class="space-30"></div>
@@ -239,7 +204,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="heading-sec">Recent work</h3>
+                    <h3 class="heading-sec">Upcoming Events</h3>
                 </div>
             </div><!--row-->
             <div class="row">
@@ -332,60 +297,7 @@
             </div><!--row portfolio item-->
         </div><!--recent work container end-->
         <div class="space-70"></div>
-        <section id="content-region-1" class="padding-40">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-7 features">
-                        <h3>Our services</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut ipsum mauris. Fusce condimentum mollis eros vitae facilisis. Praesent gravida dignissim felis, id sagittis mauris rutrum non. Nullam pretium id sem ut hendrerit.
-                        </p>
-                        <div class="space-30"></div>
-                        <div class="row">
-                            <div class="col-md-3 services-icon">
-                                <i class="ion-laptop"></i>
-                            </div>
-                            <div class="col-md-9 services-text">
-                                <h4 class="heading-mini">100% Responsive layout</h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut ipsum mauris. Fusce condimentum mollis eros vitae facilisis. 
-                                </p>
-                            </div>
-                        </div><!--services list-->
-                        <div class="space-30"></div>
-                        <div class="row">
-                            <div class="col-md-3 services-icon">
-                                <i class="ion-ios-barcode-outline"></i>
-                            </div>
-                            <div class="col-md-9 services-text">
-                                <h4 class="heading-mini">Clean code</h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut ipsum mauris. Fusce condimentum mollis eros vitae facilisis. 
-                                </p>
-                            </div>
-                        </div><!--services list-->
-                        <div class="space-30"></div>
-                        <div class="row">
-                            <div class="col-md-3 services-icon">
-                                <i class="ion-compose"></i>
-                            </div>
-                            <div class="col-md-9 services-text">
-                                <h4 class="heading-mini">Easy customization</h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut ipsum mauris. Fusce condimentum mollis eros vitae facilisis. 
-                                </p>
-                            </div>
-                        </div><!--services list-->
-
-
-                    </div>
-                    <div class="col-md-5">
-                        <img src="assets/img/ipad.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-
-            </div><!--container-->
-        </section><!--features end-->
+    <!--features end-->
         <section id="content-region-2" class="slider-testimonials ">
 
             <div class="container">
@@ -422,92 +334,10 @@
             </div>
         </section> <!--testimonials section end here-->
         <div class="space-70"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="heading-sec">Latest news</h3>
-                </div>
-            </div><!--row-->
-            <div class="row">
-                <div class="col-md-4 margin-btm-20">
-                    <div class="news-sec">
-                        <div class="news-thumnail">
-                            <a href="blog-post.html">
-                                <img src="assets/img/blog/blog-1.jpg" class="img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="news-desc">
-                            <h3 class="blog-post-title"><a href="blog-post.html" class="hover-color">Lorem ipsum dollor sit amet</a></h3>
-                            <span class="news-post-cat">On 26 may 2014 | sports</span>
-                            <p>
-                                aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna..
-                            </p>
-                        </div>
-                    </div>
-                </div><!--latest news items-->
-                <div class="col-md-4 margin-btm-20">
-                    <div class="news-sec">
-                        <div class="news-thumnail">
-                            <a href="blog-post.html">
-                                <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="news-desc">
-                            <h3 class="blog-post-title"><a href="blog-post.html" class="hover-color">Lorem ipsum dollor sit amet</a></h3>
-                            <span class="news-post-cat">On 26 may 2014 | sports</span>
-                            <p>
-                                aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna..
-                            </p>
-                        </div>
-                    </div>
-                </div><!--latest news items-->
-                <div class="col-md-4 margin-btm-20">
-                    <div class="news-sec">
-                        <div class="news-thumnail">
-                            <a href="blog-post.html">
-                                <img src="assets/img/blog/blog-4.jpg" class="img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="news-desc">
-                            <h3 class="blog-post-title"><a href="blog-post.html" class="hover-color">Lorem ipsum dollor sit amet</a></h3>
-                            <span class="news-post-cat">On 26 may 2014 | sports</span>
-                            <p>
-                                aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna..
-                            </p>
-                        </div>
-                    </div>
-                </div><!--latest news items-->
-            </div><!--row end-->
-        </div><!--container recent news end-->
+      <!--container recent news end-->
         <div class="space-50"></div>
-        <div class="newsletter-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 ml-auto mr-auto">
-                        <h3>Get latest news from us</h3>
-                        <p>
-                            Subscribe to our newsletter
-                        </p>
-                    </div>
-                </div><!--row-->
-
-                <div class="row">
-                    <div class="col-md-4 ml-auto mr-auto text-center">
-                        <form method="post" action="#" class="form-subscribe">
-                            <input type="text" name="email" placeholder="Email Id..." class="form-control">
-                            <button type="submit" name="submit" class="btn theme-btn-color btn-block">Subscribe Now</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="cta-bg">
-            <div class="container text-center">
-                <h3>Simple and Minimal Design
-                    <a href="#" class="btn btn-lg btn-white btn-radius">Purchase Now</a>
-                </h3>
-            </div>
-        </div>
+      
+        
         <!--footer-->
         <div id="footer">
             <div class="container">
@@ -528,13 +358,11 @@
                         </div>
                         <div class="space-20"></div>
                         <div class="footer-col">
-                            <h3>Follow us</h3>
+                            <h3>Follow me</h3>
                             <ul class=" list-inline social-btn">
-                                <li class="list-inline-item"><a href="#"><i class="ion-social-facebook" data-toggle="tooltip" data-placement="top" title="" data-original-title="Like On Facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="#"><i class="ion-social-twitter" data-toggle="tooltip" data-placement="top" title="" data-original-title="Follow On twitter"></i></a></li>
-                                <li class="list-inline-item"><a href="#"><i class="ion-social-googleplus" data-toggle="tooltip" data-placement="top" title="" data-original-title="Follow On googleplus"></i></a></li>
-                                <li class="list-inline-item"><a href="#"><i class="ion-social-pinterest" data-toggle="tooltip" data-placement="top" title="" data-original-title="pinterest"></i></a></li>
-                                <li class="list-inline-item"><a href="#"><i class="ion-social-skype" data-toggle="tooltip" data-placement="top" title="" data-original-title="skype"></i></a></li>
+                                <li class="list-inline-item"><a href="#"><i class="ion-social-github" data-toggle="tooltip" data-placement="top" title="" data-original-title="Follow on Github"></i></a></li>
+                                <li class="list-inline-item"><a href="#"><i class="fab fa-medium" data-toggle="tooltip" data-placement="top" title="" data-original-title="Follow On Medium"></i></a></li>
+                                <li class="list-inline-item"><a href="#"><i class="ion-social-linkedin" data-toggle="tooltip" data-placement="top" title="" data-original-title="Follow On Linkedin"></i></a></li>
                             </ul>
                         </div><!--footer social col-->
                     </div><!--col-4 end-->
