--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,13 @@
                             <li class="active dropdown nav-item">
                                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Home</a> 
                                 <ul class="dropdown-menu">
-                                    <li><a href="index.html" class="dropdown-item">Home - Default</a></li>
+                                    <!-- <li><a href="index.html" class="dropdown-item">Home - Default</a></li>
                                     <li><a href="home-master.html" class="dropdown-item">Home - Master Slider</a></li>
                                     <li><a href="home-animation.html" class="dropdown-item">Home - Animations</a></li>
                                     <li><a href="home-carousel.html" class="dropdown-item">Home Carousel</a></li>
                                     <li><a href="home-boxed.html" class="dropdown-item">Home boxed</a></li>
-                                    <li><a href="home-onepage.html" class="dropdown-item">One Page</a></li>
-                                    <li class="dropdown-submenu">
+                                    <li><a href="home-onepage.html" class="dropdown-item">One Page</a></li> -->
+                                    <!-- <li class="dropdown-submenu">
                                         <a tabindex="-1" href="#"  class="dropdown-item">Multi level menu </a>
                                         <ul class="dropdown-menu">
                                             <li><a href="#" class="dropdown-item"> menu level 2</a></li>
@@ -56,44 +56,28 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </li>
                             <li class="dropdown nav-item">
-                                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Portfolio</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="portfolio.html" class="dropdown-item">Portfolio 3 col</a></li>
-                                    <li><a href="portfolio-masonry.html" class="dropdown-item">Portfolio Masonry</a></li>
-                                    <li><a href="portfolio-full.html" class="dropdown-item">Portfolio Full width</a></li>
-                                    <li><a href="portfolio-full-boxed.html" class="dropdown-item">Full width boxed</a></li>                            
-                                    <li><a href="portfolio-single.html" class="dropdown-item">Portfolio Single</a></li>
-                                </ul>
+                                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Calender</a>
                             </li>
                             <li class=" dropdown nav-item">
-                                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Blog</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="blog-full.html">Blog Full width</a></li>
-                                    <li><a class="dropdown-item" href="blog-sidebar.html">Blog Sidebar</a></li>  
-                                    <li><a class="dropdown-item" href="blog-masonry.html">Blog Masonry</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
-                                </ul>
+                                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Meetups</a>
                             </li>
                             <!--mega menu-->
                             <li class="dropdown dropdown-fw nav-item">
                                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">More  <i class="fa fa-angle-down"></i></a>
-                                <ul class="dropdown-menu">
+<!--                                 <ul class="dropdown-menu">
                                     <li>
                                         <div class="yamm-content">
                                             <div class="row">
                                                 <div class="col-lg-3">
                                                     <h3 class="heading">Pages 1</h3>
                                                     <ul class="mega-vertical-nav list-unstyled">  
-                                                        <li><a class="dropdown-item" href="about.html">About Us</a></li>
-                                                        <li><a class="dropdown-item" href="contact.html">Contact Us</a></li>
-                                                        <li><a class="dropdown-item" href="services.html">Services</a></li>
-                                                        <li><a class="dropdown-item" href="our-team.html">Our Team</a></li>
-                                                        <li><a class="dropdown-item" href="login.html">Login</a></li>
-                                                        <li><a class="dropdown-item" href="signup.html">Sign up</a></li>
+                                                        <li><a class="dropdown-item" href="about.html">About</a></li>
+                                                        <li><a class="dropdown-item" href="contact.html">Contact</a></li>
+                                                        <li><a class="dropdown-item" href="services.html">FAQ</a></li>
                                                     </ul>
 
                                                 </div>
@@ -122,16 +106,16 @@
                                             </div>
                                         </div>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </li> 
                             <li class=" dropdown nav-item">
                                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Shop</a>
-                                <ul class="dropdown-menu dropdown-menu-right">
+<!--                                 <ul class="dropdown-menu dropdown-menu-right">
                                     <li><a class="dropdown-item" href="shop-default.html">Shop 3 columns</a></li><li><a href="shop-sidebar.html" class="dropdown-item">Shop Sidebar</a></li>
                                     <li><a class="dropdown-item" href="product-detail.html">Product Detail</a></li>                              
                                     <li><a class="dropdown-item" href="shop-cart.html">Cart</a></li>
                                     <li><a class="dropdown-item" href="shop-checkout.html">Checkout</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                         </ul>
                     </div>
@@ -204,9 +188,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="heading-sec">Upcoming Events</h3>
+                    <h3 class="heading-sec">Popular Meetups</h3>
                 </div>
             </div><!--row-->
+
             <div class="row">
                 <div class="col-md-4 col-sm-6 margin-btm-40">
                     <div class="portfolio-sec">
@@ -266,7 +251,7 @@
                         </div>
                     </div>
                 </div><!--portfolio item -->
-                <div class="col-md-4 col-sm-6 margin-btm-40">
+<!--                 <div class="col-md-4 col-sm-6 margin-btm-40">
                     <div class="portfolio-sec">
                         <div class="portfolio-thumnail">
                             <a href="portfolio-single.html">
@@ -279,8 +264,8 @@
                             <h4><a href="portfolio-single.html" class="btn theme-btn-default btn-lg">More detail</a></h4>
                         </div>
                     </div>
-                </div><!--portfolio item -->
-                <div class="col-md-4 col-sm-6 margin-btm-40">
+                </div> --><!--portfolio item -->
+                <!-- <div class="col-md-4 col-sm-6 margin-btm-40">
                     <div class="portfolio-sec">
                         <div class="portfolio-thumnail">
                             <a href="portfolio-single.html">
@@ -293,7 +278,7 @@
                             <h4><a href="portfolio-single.html" class="btn theme-btn-default btn-lg">More detail</a></h4>
                         </div>
                     </div>
-                </div><!--portfolio item -->
+                </div> --><!--portfolio item -->
             </div><!--row portfolio item-->
         </div><!--recent work container end-->
         <div class="space-70"></div>
@@ -308,10 +293,9 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <p class="lead">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut ipsum mauris. Fusce condimentum mollis eros vitae facilisis.  
+                                        Discover the Cosmos 
                                     </p>
                                     <img src="assets/img/team/team-1.jpg" alt="" class="img-fluid rounded-circle" width="60">
-                                    <h6>John Doe - <small>Bizwrap User</small></h6>
                                 </div>
                                 <div class="swiper-slide">
                                     <p class="lead">
@@ -333,9 +317,8 @@
                 </div>
             </div>
         </section> <!--testimonials section end here-->
-        <div class="space-70"></div>
       <!--container recent news end-->
-        <div class="space-50"></div>
+
       
         
         <!--footer-->
