completed all vue templates but meetup show, added star map

--- a/public/meetups.html
+++ b/public/meetups.html
@@ -74,68 +74,37 @@
             </div>
         </div>
 
-        <div id="js-grid-awesome-work" class="cbp cbp-l-grid-work">
-            <div class="cbp-item identity">
-                <a href="portfolio-single.html" class="cbp-caption" rel="nofollow">
-                    <div class="cbp-caption-defaultWrap">
-                        <img src="assets/img/work/work-1.jpg" alt="">
-                    </div>
-                    <div class="cbp-caption-activeWrap"></div>
-                </a>
-                <a href="portfolio-single.html" class="cbp-l-grid-work-title" rel="nofollow">Dashboard</a>
-                <div class="cbp-l-grid-work-desc">Web Design / Graphic</div>
+        <!-- <div id="js-grid-awesome-work" class="cbp cbp-l-grid-work"> -->
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="cbp-item web-design logos">
-                <a href="portfolio-single.html" class="cbp-caption " rel="nofollow">
-                    <div class="cbp-caption-defaultWrap">
-                        <img src="assets/img/work/work-2.jpg" alt="">
-                    </div>
-                    <div class="cbp-caption-activeWrap"></div>
-                </a>
-                <a href="portfolio-single.html" class="cbp-l-grid-work-title " rel="nofollow">World Clock</a>
-                <div class="cbp-l-grid-work-desc">Logo / Web Design</div>
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="cbp-item graphic logos">
-                <a href="portfolio-single.html" class="cbp-caption" rel="nofollow">
-                    <div class="cbp-caption-defaultWrap">
-                        <img src="assets/img/work/work-3.jpg" alt="">
-                    </div>
-                    <div class="cbp-caption-activeWrap"></div>
-                </a>
-                <a href="portfolio-single.html" class="cbp-l-grid-work-title" rel="nofollow">To-Do Dashboard</a>
-                <div class="cbp-l-grid-work-desc">Graphic / Logo</div>
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="cbp-item web-design graphic">
-                <a href="portfolio-single.html" class="cbp-caption" rel="nofollow">
-                    <div class="cbp-caption-defaultWrap">
-                        <img src="assets/img/work/work-4.jpg" alt="">
-                    </div>
-                    <div class="cbp-caption-activeWrap"></div>
-                </a>
-                <a href="portfolio-single.html" class="cbp-l-grid-work-title" rel="nofollow">Events and More</a>
-                <div class="cbp-l-grid-work-desc">Web Design / Graphic</div>
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="cbp-item identity web-design">
-                <a href="portfolio-single.html" class="cbp-caption" rel="nofollow">
-                    <div class="cbp-caption-defaultWrap">
-                        <img src="assets/img/work/work-5.jpg" alt="">
-                    </div>
-                    <div class="cbp-caption-activeWrap"></div>
-                </a>
-                <a href="portfolio-single.html" class="cbp-l-grid-work-title" rel="nofollow">WhereTO App</a>
-                <div class="cbp-l-grid-work-desc">Web Design / Identity</div>
             </div>
-            <div class="cbp-item identity web-design">
-                <a href="portfolio-single.html" class="cbp-caption " rel="nofollow">
-                    <div class="cbp-caption-defaultWrap">
-                        <img src="assets/img/work/work-6.jpg" alt="">
-                    </div>
-                    <div class="cbp-caption-activeWrap"></div>
-                </a>
-                <a href="portfolio-single.html" class="cbp-l-grid-work-title " rel="nofollow">Ski * Buddy</a>
-                <div class="cbp-l-grid-work-desc">Identity / Web Design</div>
-            </div>
-        </div><!--/portfolio-->
+        <!-- </div>/portfolio -->
         </div>
          <div class="space-70"></div>
         <div id="footer">
